--- a/quickdotsview/build.gradle
+++ b/quickdotsview/build.gradle
@@ -31,3 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+apply from: 'publish.gradle'
