--- a/quickdotsview/publish.gradle
+++ b/quickdotsview/publish.gradle
@@ -32,8 +32,8 @@ publishing {
 }
 
 bintray {
-    user = project.hasProperty('bintrayUsername') ?: System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ?: System.getenv('BINTRAY_API_KEY')
+    user = project.property('bintrayUsername')
+    key = project.property('bintrayApiKey')
     publications = ['Production']
     configurations = ['archives']
     // Default: false. Whether to run this as dry-run, without deploying
@@ -41,7 +41,7 @@ bintray {
     // Default: false. Whether to override version artifacts already published
     override = false
     // Default: false. Whether version should be auto published after an upload
-    publish = true
+    publish = false
     pkg {
         repo = 'android-libs'
         name = 'QuickDotsView'
