--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,11 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+# TODO Update
 VERSION_NAME=1.0.0
 VERSION_CODE=1
 
-ANDROID_BUILD_TOOLS_VERSION=28.0.3
-ANDROID_COMPILE_SDK_VERSION=28
-ANDROID_TARGET_SDK_VERSION=28
+ANDROID_BUILD_TOOLS_VERSION=30.0.2
+ANDROID_COMPILE_SDK_VERSION=30
+ANDROID_TARGET_SDK_VERSION=30
 ANDROID_MIN_SDK=14
