--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,29 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# TODO Update
-VERSION_NAME=1.0.0
-VERSION_CODE=1
-
 ANDROID_BUILD_TOOLS_VERSION=30.0.2
 ANDROID_COMPILE_SDK_VERSION=30
 ANDROID_TARGET_SDK_VERSION=30
 ANDROID_MIN_SDK=14
+
+GROUP=com.radusalagean
+POM_ARTIFACT_ID=quickdotsview
+VERSION_NAME=1.0.1
+VERSION_CODE=2
+
+POM_NAME=QuickDotsView
+POM_DESCRIPTION=Android library that enables users to include configurable dot indicators in their projects, with built-in linking support for ViewPager.
+POM_INCEPTION_YEAR=2019
+POM_URL=https://github.com/radusalagean/quick-dots-view
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/radusalagean/quick-dots-view
+POM_SCM_CONNECTION=scm:git:git://github.com/radusalagean/quick-dots-view.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/radusalagean/quick-dots-view.git
+
+POM_DEVELOPER_ID=radusalagean
+POM_DEVELOPER_NAME=Radu Salagean
+POM_DEVELOPER_URL=https://github.com/radusalagean
